added models with specific record in loop

--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "react-sidebar-v1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "react_inventory/build",
+  "homepage": "",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.16",
+    "@mui/styled-engine-sc": "^5.10.16",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "recharts": "^2.1.16",
-    "rsuite": "^5.23.0"
+    "rsuite": "^5.23.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
