--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.2.0",
+    "datatables.net": "^1.13.1",
+    "jquery": "^3.6.1",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
